# memvid

./: .gitignore  Cargo.toml  README.md
benches/: search_precision_benchmark.rs
docs/i18n/: README.ar.md  README.bn.md  README.cs.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.nl.md  README.so.md
docs/i18n/scripts/: auto-add-flags.js
examples/: basic_usage.rs  generate_performance_report.rs  pdf_ingestion.rs  test_implicit_or_bug.rs
src/: graph_search.rs  lib.rs  tests_lex_flag.rs
src/io/: wal.rs
src/memvid/: acl.rs  ask.rs  audit.rs  doctor.rs  lifecycle.rs  mod.rs  mutation.rs
src/memvid/search/: api.rs  mod.rs
src/reader/: mod.rs  xlsx.rs  xlsx_chunker.rs  xlsx_ooxml.rs  xlsx_table_detect.rs
src/replay/: engine.rs
src/types/: acl.rs  ask.rs  mod.rs  options.rs  search.rs
tests/: doctor_recovery.rs  replay_integrity.rs  search.rs  test_implicit_and.rs  xlsx_structured.rs
